# AdhesionsPicEtCol

./: .gitignore  Adherent.py  README.md  adhesionsPicEtCol.py  asynchronous.php  certificatsMedicaux.py  commandeCurl.sh  common.php  index.php  inputOutput.py  install_python_env.sh  main_faire_adhesion_a_la_main.py  main_rerun_json_from_logs.py  monadhesion.py  myFunctions.py  notifications-helloasso.php  notifications-helloasso.py  pyproject.toml  requirements.txt  run.sh  sendMail.py
helpers/: common_processing.py  helpers_ods.py
