[tool.poetry]
name = "adhesionpicetcol"
version = "0.1.0"
description = "helloasso bot"
readme = "README.md"
authors = ["adam <adam@toto.fr>"]
packages = [{ include = "adhesionpicetcol" }]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
virtualenv = ">=20.19, <=20.22"
numpy = [
    { version = "1.21.6", python = ">=3.7.2,<3.8.0" },
    { version = "^1.23.5", python = ">=3.8" },
]
pylocalc = "^0.5.2"
unidecode = "^1.3.8"
wget = "^3.2"
markdown = "^3.6"
beautifulsoup4 = "^4.12.3"
pandas = [
    # { version = "1.3.5", python = ">=3.7.2,<3.8.0" },
    # 2.0.3 seems to more recent version compatible with python 3.8
    # could change in the future
    { version = ">=2.0.3", python = ">=3.8.0, <3.9.0" },
    # pandas 2.1.1 need python >= 3.9
    { version = ">=2.1.1", python = ">=3.9.0" },
]
odfpy = "^1.4.1"
certifi = "^2024.7.4"
helloasso-apiv5 = "^1.0.0"
